sql/item_sum.h
@@ -1297,6 +1297,10 @@ public:
   {
     return SP_AGGREGATE_FUNC;
   }
+  Field *create_field_for_create_select(TABLE *table)
+  {
+    return create_table_field_from_handler(table);
+  }
   void fix_length_and_dec();
   bool fix_fields(THD *thd, Item **ref);
   const char *func_name() const;
